--- a/autogpts/forge/pyproject.toml
+++ b/autogpts/forge/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = "^0.0.6"
 toml = "^0.10.2"
 jinja2 = "^3.1.2"
 requests = "^2.31.0"
+pytest = "^7.4.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
