--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   uuid: ^4.0.0
   url_launcher: ^6.1.14
   fluttertoast: ^8.2.2
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
